gif size changed

--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -41,7 +41,7 @@
 
 					<section class="wrapper style1 align-center">
 						<div class="image-port">
-							<img src="images/task_app.gif" alt="" />
+							<img src="images/task_app.gif" alt="" class="gif-image"/>
 						</div>
 					</section>
 
