--- a/portfolio_1.html
+++ b/portfolio_1.html
@@ -40,7 +40,7 @@
 				<section class="wrapper style1 align-center">
 
 					<div class="image-port">
-						<img src="images/property_app.gif" alt="" />
+						<img src="images/property_app.gif" alt="" class="gif-image"/>
 					</div>
 				</section>
 
