--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<div class="content">
 							<h1>Simon Graham</h1>
 							<h3>About</h3>
-							<p class="major">Simon Graham has worked in the field of Data Analytics for more than eight years, with experience in both the health and financial industries.<br><br>
-							He has spent the past two years living in Asia, where he taught English as a foregn language to adults, but having recently returned to the UK, he is looking forward to returning to the world of data.<br><br>
+							<p class="major">Simon has worked in the field of Data Analytics for more than seven years, with experience in both the health and financial industries.<br><br>
+							He has spent the past two years living in Asia, where he taught English as a foregn language to adults, but has recently returned to the UK.<br><br>
 							Simon has a vast knowledge of different analytical tools and techniques, as well as experience in a number of programming and web development languages.
 						</p>
 						</div>
