--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Task Organiser</h2>
-							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
-							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.</p>
+							<p>This app was created to help manage individual tasks that people have to complete on a daily basis.<br>
+							It allows the user to enter new tasks and manage existing; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
 									<li><a href="portfolio_2.html" class="button">See More</a></li>
