--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="content">
 							<h2>Task Organiser</h2>
 							<p>This app was created to help manage individual tasks that people have to complete on a daily basis.<br>
-							It allows the user to enter new tasks and manage existing; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs.</p>
+							It allows the user to view a dashboard of interactive graphs; enter new tasks and manage existing; and view separate lists of tasks that are due, overdue and recently completed. </p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
 									<li><a href="portfolio_2.html" class="button">See More</a></li>
