new project added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<div class="content">
 							<h1>Simon Graham</h1>
 							<h3>About</h3>
-							<p class="major">Simon has worked in the field of Data Analytics for more than seven years, with experience in both the health and financial industries.<br><br>
-							He has spent the past two years living in Asia, where he taught English as a foregn language to adults, but has recently returned to the UK.<br><br>
+							<p class="major">Simon Graham has worked in the field of Data Analytics for more than eight years, with experience in both the health and financial industries.<br><br>
+							He has spent the past two years living in Asia, where he taught English as a foregn language to adults, but having recently returned to the UK, he is looking forward to a new stage in his career.<br><br>
 							Simon has a vast knowledge of different analytical tools and techniques, as well as experience in a number of programming and web development languages.
 						</p>
 						</div>
@@ -43,19 +43,16 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>UK Property Data Scraper</h2>
-							<p>This app scrapes data from the UK property site Zoopla. It allows you to make certain selections such as what city, how many rooms, and your preferred price range. You can then download the results to your downloads folder.</p>
+							<h2>Northern Ireland COVID19 Analysis</h2>
+							<p>Analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
 									<li><a href="portfolio_1.html" class="button">See More</a></li>
 								</ul>
-								<ul class="actions stacked">
-									<li><a href="https://github.com/SimonGraham86/uk-property-data-scraper" class="button" target="_blank">See Github</a></li>
-								</ul>
 							</span>
 						</div>
 						<div class="image">
-							<img src="images/houses.jpg" alt="" />
+							<img src="images/analysis.jpg" alt="" />
 						</div>
 					</section>
 
@@ -63,8 +60,8 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Task Organiser</h2>
-							<p>This app was created to help manage individual tasks that people have to complete on a daily basis.<br>
-							It allows the user to view a dashboard of interactive graphs; enter new tasks and manage existing; and view separate lists of tasks that are due, overdue and recently completed. </p>
+							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
+							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
 									<li><a href="portfolio_2.html" class="button">See More</a></li>
@@ -76,6 +73,25 @@
 						</div>
 						<div class="image">
 							<img src="images/stress.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Five -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>UK Property Data Scraper</h2>
+							<p>This app scrapes data from the UK property site Zoopla. It allows you to make certain selections such as what city, how many rooms, and your preferred price range. You can then download the results to your downloads folder.</p>
+							<span class="button-wrapper">
+								<ul class="actions stacked">
+									<li><a href="portfolio_3.html" class="button">See More</a></li>
+								</ul>
+								<ul class="actions stacked">
+									<li><a href="https://github.com/SimonGraham86/uk-property-data-scraper" class="button" target="_blank">See Github</a></li>
+								</ul>
+							</span>
+						</div>
+						<div class="image">
+							<img src="images/houses.jpg" alt="" />
 						</div>
 					</section>
 
