--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -20,8 +20,8 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Task Organiser</h2>
-							<p>This app was created to help manage individual tasks that people have to complete on a daily basis.<br>
-							It allows the user to view a dashboard of interactive graphs; enter new tasks and manage existing; and view separate lists of tasks that are due, overdue and recently completed.<br><br>
+							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
+							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.<br><br>
 							This app was built in a Flask framework, and is connected to a simple postgres database using SQLAlchemy. The tables and graphs were created using pandas and bokeh. HTML and CSS were used to create the front end of the application. <br><br>
 							See the gif below for more details.</p>
 							<span class="button-wrapper">
@@ -41,7 +41,7 @@
 
 					<section class="wrapper style1 align-center">
 						<div class="image-port">
-							<img src="images/task_app.gif" alt="" class="gif-image"/>
+							<img src="images/task_app.gif" alt="" />
 						</div>
 					</section>
 
