--- a/index.html
+++ b/index.html
@@ -43,11 +43,28 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
+							<h2>Tableau Dashboard Examples</h2>
+							<p>In this section, you will find a number of Tableau Dashboard examples using different data sources.</p>
+							<span class="button-wrapper">
+								<ul class="actions stacked">
+									<li><a href="portfolio_1.html" class="button">See More</a></li>
+								</ul>
+							</span>
+						</div>
+						<div class="image">
+							<img src="images/dashboard1.jpg" alt="" />
+						</div>
+					</section>
+
+				
+				<!-- Four -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
 							<h2>Northern Ireland COVID19 Analysis</h2>
 							<p>Analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
-									<li><a href="portfolio_1.html" class="button">See More</a></li>
+									<li><a href="portfolio_2.html" class="button">See More</a></li>
 								</ul>
 							</span>
 						</div>
@@ -56,15 +73,15 @@
 						</div>
 					</section>
 
-				<!-- Four -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<!-- Five -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Task Organiser</h2>
 							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
 							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
-									<li><a href="portfolio_2.html" class="button">See More</a></li>
+									<li><a href="portfolio_3.html" class="button">See More</a></li>
 								</ul>
 								<ul class="actions stacked">
 									<li><a href="https://github.com/SimonGraham86/task_organiser" class="button" target="_blank">See Github</a></li>
@@ -76,14 +93,14 @@
 						</div>
 					</section>
 
-				<!-- Five -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+				<!-- Six -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>UK Property Data Scraper</h2>
 							<p>This app scrapes data from the UK property site Zoopla. It allows you to make certain selections such as what city, how many rooms, and your preferred price range. You can then download the results to your downloads folder.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
-									<li><a href="portfolio_3.html" class="button">See More</a></li>
+									<li><a href="portfolio_4.html" class="button">See More</a></li>
 								</ul>
 								<ul class="actions stacked">
 									<li><a href="https://github.com/SimonGraham86/uk-property-data-scraper" class="button" target="_blank">See Github</a></li>
