--- a/portfolio_3.html
+++ b/portfolio_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio: 3</title>
+		<title>Portfolio: 2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,32 +17,33 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-					<div class="content">
-						<h2>UK Property Data Scraper</h2>
-						<p>This app scrapes data from the UK property site Zoopla. It allows you to make certain selections such as what city, how many rooms, and your preferred price range. You can then download the results to your downloads folder.<br><br>
-						It was built using python and other third party libraries, such as bs4, pandas, requests and tkinter. <br><br>
-						See the gif below for more details.</p>
-						<span class="button-wrapper">
-							<ul class="actions stacked">
-								<li><a href="javascript:window.history.back()" class="button">Go Back</a></li>
-							</ul>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/SimonGraham86/uk-property-data-scraper" class="button" target="_blank">See Github</a></li>
-							</ul>
-						</span>
-					</div>
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Task Organiser</h2>
+							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
+							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.<br><br>
+							This app was built in a Flask framework, and is connected to a simple postgres database using SQLAlchemy. The tables and graphs were created using pandas and bokeh. HTML and CSS were used to create the front end of the application. <br><br>
+							See the gif below for more details.</p>
+							<span class="button-wrapper">
+								<ul class="actions stacked">
+									<li><a href="javascript:window.history.back()" class="button">Go Back</a></li>
+								</ul>
+								<ul class="actions stacked">
+									<li><a href="https://github.com/SimonGraham86/task_organiser" class="button" target="_blank">See Github</a></li>
+								</ul>
+							</span>
+						</div>
 					<div class="image">
-						<img src="images/houses2.jpg" alt="" />
+						<img src="images/stress2.jpg" alt="" />
 					</div>
-				</section>
+					</section>
 
-				<section class="wrapper style1 align-center">
 
-					<div class="image-port">
-						<img src="images/property_app.gif" alt="" />
-					</div>
-				</section>
+					<section class="wrapper style1 align-center">
+						<div class="image-port">
+							<img src="images/task_app.gif" alt="" />
+						</div>
+					</section>
 
 				
 		<!-- Scripts -->
