changes to layout

--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio: 1</title>
+		<title>Portfolio: 2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Northern Ireland COVID19 Analysis</h2>
 						<p>Below is an analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.<br><br>
