--- a/portfolio_1.html
+++ b/portfolio_1.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Tableau Dashboard Examples</h2>
 						<p>In this section, you will find a number of Tableau Dashboard examples using different data sources.</p>
@@ -35,7 +35,87 @@
 				<section class="wrapper style1 align-center">
 					<div class="inner">
 						<h3>Global Chinese Investment 2000 -2014</h3>
-						
+						<div class='tableauPlaceholder' id='viz1601380926191' style='position: relative; margin: auto;'>
+							<noscript>
+								<a href='#'>
+									<img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ch&#47;ChinaDashboard2&#47;Dashboard1&#47;1_rss.png' style='border: none' />
+								</a>
+							</noscript>
+							<object class='tableauViz'  style='display:none;'>
+								<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+								<param name='embed_code_version' value='3' /> 
+								<param name='site_root' value='' />
+								<param name='name' value='ChinaDashboard2&#47;Dashboard1' />
+								<param name='tabs' value='no' />
+								<param name='toolbar' value='yes' />
+								<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ch&#47;ChinaDashboard2&#47;Dashboard1&#47;1.png' /> 
+								<param name='animate_transition' value='yes' />
+								<param name='display_static_image' value='yes' />
+								<param name='display_spinner' value='yes' />
+								<param name='display_overlay' value='yes' />
+								<param name='display_count' value='yes' />
+								<param name='language' value='en-GB' />
+							</object>
+						</div>                
+						<script type='text/javascript'>                    
+							var divElement = document.getElementById('viz1601380926191');                    
+							var vizElement = divElement.getElementsByTagName('object')[0];                    
+							if ( divElement.offsetWidth > 800 ) { 
+								vizElement.style.width='1000px';
+								vizElement.style.height='827px';
+							} else if ( divElement.offsetWidth > 500 ) { 
+								vizElement.style.width='1000px';
+								vizElement.style.height='827px';
+							} else { 
+								vizElement.style.width='100%';
+								vizElement.style.height='1177px';
+							}                     
+							var scriptElement = document.createElement('script');                    
+							scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+							vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+						</script>
+
+						<br><br>
+						<h3>Regional Sales of Toy Company</h3>
+						<div class='tableauPlaceholder' id='viz1601381739290' style='position: relative; margin: auto;'>
+							<noscript>
+								<a href='#'>
+									<img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_Sales_16011146154510&#47;Dashboard1&#47;1_rss.png' style='border: none' />
+								</a>
+							</noscript>
+							<object class='tableauViz'  style='display:none;'>
+								<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+								<param name='embed_code_version' value='3' /> 
+								<param name='site_root' value='' />
+								<param name='name' value='Regional_Sales_16011146154510&#47;Dashboard1' />
+								<param name='tabs' value='no' />
+								<param name='toolbar' value='yes' />
+								<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_Sales_16011146154510&#47;Dashboard1&#47;1.png' /> 
+								<param name='animate_transition' value='yes' />
+								<param name='display_static_image' value='yes' />
+								<param name='display_spinner' value='yes' />
+								<param name='display_overlay' value='yes' />
+								<param name='display_count' value='yes' />
+								<param name='language' value='en-GB' />
+							</object>
+						</div>                
+						<script type='text/javascript'>                    
+							var divElement = document.getElementById('viz1601381739290');                    
+							var vizElement = divElement.getElementsByTagName('object')[0];                    
+							if ( divElement.offsetWidth > 800 ) { 
+								vizElement.style.width='1000px';
+								vizElement.style.height='827px';
+							} else if ( divElement.offsetWidth > 500 ) { 
+								vizElement.style.width='1000px';
+								vizElement.style.height='827px';
+							} else { 
+								vizElement.style.width='100%';
+								vizElement.style.height='1527px';
+							}                     
+							var scriptElement = document.createElement('script');                    
+							scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+							vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+						</script>
 					</div>
 					
 				</section>
