--- a/portfolio_3.html
+++ b/portfolio_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio: 2</title>
+		<title>Portfolio: 3</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Task Organiser</h2>
 							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
