--- a/portfolio_4.html
+++ b/portfolio_4.html
@@ -39,7 +39,7 @@
 
 				<section class="wrapper style1 align-center">
 
-					<div class="image-port" style='position: relative; margin: auto;'>
+					<div class="image-port" style='margin: auto;'>
 						<img src="images/property_app.gif" alt="" />
 					</div>
 				</section>
