--- a/portfolio_3.html
+++ b/portfolio_3.html
@@ -40,7 +40,7 @@
 
 
 					<section class="wrapper style1 align-center">
-						<div class="image-port" style='margin: auto;'>
+						<div class="image-port" style='margin: auto; padding-top: 50px; padding-bottom: 50px; max-width: 90%;'>
 							<img src="images/task_app.gif" alt="" />
 						</div>
 					</section>
