--- a/portfolio_4.html
+++ b/portfolio_4.html
@@ -40,7 +40,7 @@
 				<section class="wrapper style1 align-center">
 
 					<div class="image-port" style='margin: auto; padding-top: 50px; padding-bottom: 50px; max-width: 90%;'>
-						<img src="images/property_app.gif" alt="" />
+						<img src="images/property_app.gif" alt="" style="max-width: 100%;"/>
 					</div>
 				</section>
 
