--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -39,17 +39,17 @@
 						<p>This has been a very tumultuous time for people all around the world. Many economies are, or soon will be, facing a recession. As well as that, people of every race, religion or creed have perished due to this deadly virus. <br></p>
 						<h3>Related Deaths in Northen Ireland</h3>
 						<p>We'll start by looking at the weekly death rates (to 31st July) in Northern Ireland.</p>
-						<embed type="text/html" src="images/dash1.html" width="500" height="400" >
-						<embed type="text/html" src="images/dash2.html" width="500" height="400" >
+						<embed type="text/html" src="images/dash1.html" width="500" height="400" style="max-width: 90%">
+						<embed type="text/html" src="images/dash2.html" width="500" height="400" style="max-width: 90%">
 						<p>After the first death in w/e 20th March, there was sharp rise in weekly deaths until it peaked at 128 in the sixth week (w/e 24th April).
 						<br>Since then, the number of weekly deaths has declined, and that can be seen in the cumulative curve beginning to plateau from the middle of June. As of 31st July, 854 deaths have been registered across the region. </p>
-						<embed type="text/html" src="images/dash3.html" width="950" height="450" >
+						<embed type="text/html" src="images/dash3.html" width="950" height="450" style="max-width: 90%">
 						<p>Looking at the overall deaths by Local Authority, it's not surprising that the Belfast area (245) has the highest, given it's larger population and higher per capita figure. Fermanagh and Omagh recorded the lowest deaths in this period, with only 17 to the 31st July.</p>
 						<h3>The Concerns Of The Northern Ireland Public</h3>
 						<p>There was an opinion survey conducted during the period of 21st April to 22nd June, with a total of 925 interviews taking place.<br>
 						Participants were asked in which ways COVID19 was affecting their lives and what has been the biggest affect. The responses to these questions can be seen in the graphs below.<i> (NB. There is currently an issue with the legend function of the pie chart. Please hover over the chart to learn more about the segments)</i></p>
-						<embed type="text/html" src="images/dash4.html" width="500" height="400" >
-						<embed type="text/html" src="images/dash5.html" width="500" height="400" >
+						<embed type="text/html" src="images/dash4.html" width="500" height="400" style="max-width: 90%">
+						<embed type="text/html" src="images/dash5.html" width="500" height="400" style="max-width: 90%">
 						<p>The thing that has affected most of the participants is being unable to make plans(66%).<br> 
 						The personal travel plans of 60% of the participants have been affected, with foreign travel being restricted during the period.<br>
 						Worryingly, 58% of the respondants have said that the crisis has affected their well-being.<br>
@@ -58,9 +58,9 @@
 						<h3>Jobs in Northern Ireland</h3>
 						<p>One of the major consequences of the pandemic is how it has affected the economy, especially the labour market.<br>
 						As part of the Jobs Retention Scheme, many employments were furloughed. Below, the graphs show the percentage of employments furloughed by Industry and Local Authority. The data is taken as of 30th June 2020.</p>
-						<embed type="text/html" src="images/dash6.html" width="950" height="450" >
+						<embed type="text/html" src="images/dash6.html" width="950" height="450" style="max-width: 90%">
 						<p>The sector with the highest percentage of furloughed employments in this period was Accommodation & Food Services, with 78%. Public sectors, such as Health, Education and Public Administration had some of the lowest take-up rates, all of which were under 10%.</p>
-						<embed type="text/html" src="images/dash7.html" width="950" height="450" >
+						<embed type="text/html" src="images/dash7.html" width="950" height="450" style="max-width: 90%">
 						<p>The Local Authorities with the lowest take-up rate were Belfast and Derry City & Strabane, both with 28%. This may be due to more jobs in these areas being in less affected industries, such as IT and Finance.
 						The worst-hit Local Authority was Mid-Ulster, with a take-up rate of 35%.</p>
 					</div>
