--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style2 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-in onscroll-image-fade-in onscroll-content-fade-in">
 						<div class="content">
 							<h1>Simon Graham</h1>
 							<h3>About</h3>
@@ -33,7 +33,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center onscroll-content-fade-in">
 						<div class="inner">
 							<h2>Portfolio</h2>
 							<p>Below you will find some projects that Simon has completed in the past.</p>
@@ -41,7 +41,7 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style2 orient-right content-align-left image-position-left onscroll-image-fade-in onscroll-content-fade-left onload-image-fade-in onload-content-fade-left" id="first">
 						<div class="content">
 							<h2>Tableau Dashboard Examples</h2>
 							<p>In this section, you will find a number of Tableau Dashboard examples using different data sources.</p>
@@ -58,7 +58,7 @@
 
 				
 				<!-- Four -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Northern Ireland COVID19 Analysis</h2>
 							<p>Analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.</p>
@@ -74,7 +74,7 @@
 					</section>
 
 				<!-- Five -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left onload-image-fade-in onload-content-fade-left" id="first">
 						<div class="content">
 							<h2>Task Organiser</h2>
 							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
@@ -94,7 +94,7 @@
 					</section>
 
 				<!-- Six -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>UK Property Data Scraper</h2>
 							<p>This app scrapes data from the UK property site Zoopla. It allows you to make certain selections such as what city, how many rooms, and your preferred price range. You can then download the results to your downloads folder.</p>
@@ -113,7 +113,7 @@
 					</section>
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
+					<footer class="wrapper style1 align-center onscroll-content-fade-in">
 						<div class="inner">
 							<h2>Contact</h2>
 							<p>simongraham123486@outlook.com</p>
