--- a/portfolio_1.html
+++ b/portfolio_1.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style4 orient-left content-align-left image-position-center onload-image-fade-in onload-content-fade-right">
 					<div class="content">
 						<h2>Tableau Dashboard Examples</h2>
 						<p>In this section, you will find a number of Tableau Dashboard examples using different data sources.</p>
@@ -34,6 +34,9 @@
 
 				<section class="wrapper style1 align-center">
 					<div class="inner">
+						
+
+						<!--One-->
 						<h3>Global Chinese Investment 2000 -2014</h3>
 						<div class='tableauPlaceholder' id='viz1601380926191' style='position: relative; margin: auto;'>
 							<noscript>
@@ -74,8 +77,10 @@
 							scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 							vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 						</script>
-
 						<br><br>
+
+
+						<!--Two-->
 						<h3>Regional Sales of Toy Company</h3>
 						<div class='tableauPlaceholder' id='viz1601381739290' style='position: relative; margin: auto;'>
 							<noscript>
