--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style4 orient-right content-align-left image-position-center onload-image-fade-in onload-content-fade-left">
 					<div class="content">
 						<h2>Northern Ireland COVID19 Analysis</h2>
 						<p>Below is an analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.<br><br>
