--- a/portfolio_3.html
+++ b/portfolio_3.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style4 orient-left content-align-left image-position-center onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Task Organiser</h2>
 							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
