--- a/portfolio_4.html
+++ b/portfolio_4.html
@@ -17,7 +17,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style4 orient-right content-align-left image-position-center onload-image-fade-in onload-content-fade-left">
 					<div class="content">
 						<h2>UK Property Data Scraper</h2>
 						<p>This app scrapes data from the UK property site Zoopla. It allows you to make certain selections such as what city, how many rooms, and your preferred price range. You can then download the results to your downloads folder.<br><br>
