--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style2 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-in onscroll-image-fade-in onscroll-content-fade-in">
+					<section class="banner style2 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right onscroll-image-fade-in onscroll-content-fade-right">
 						<div class="content">
 							<h1>Simon Graham</h1>
-							<h3>About</h3>
 							<p class="major">Simon Graham has worked in the field of Data Analytics for more than seven years, with experience in both the health and financial industries.<br><br>
-							He has spent the past two years living in Asia, where he taught Business English to adults, but having recently returned to the UK, he is looking forward to a new stage in his career.<br><br>
-							Simon has a vast knowledge of different analytical tools and techniques, as well as experience in a number of programming and web development languages.
-						</p>
+							
+							Simon has a vast knowledge of different analytical tools and techniques, as well as experience in a number of programming and web development languages.<br><br>
+
+							He is currently working as a freelancer, specialising in data visualisation, analytics & forecasting, and writing code to automate time-consuming tasks. 
+							</p>
 						</div>
 						<div class="image">
 							<img src="images/banner.jpg" alt="" />
