--- a/portfolio_1.html
+++ b/portfolio_1.html
@@ -38,6 +38,9 @@
 
 						<!--One-->
 						<h3>Global Chinese Investment 2000 -2014</h3>
+						<p>After reading extensively about China's Belt and Road initiative, where they invested in nearly 70 countries and international organisations, I wanted to create a dashboard looking at how much, and in what countries, they had invested.<br><br>
+						The dashboard below shows a map of the world with a colour scale showing the countries with the lowest and highest number of projects. If you hover over an individual country, you will see the total number of projects, how much was invested and a breakdown of the industries invested in. The bar charts at the bottom of the page show the volume and value of the projects split by status.<br><br>
+						The filters allow you to choose specific regions as well as timescales</p>
 						<div class='tableauPlaceholder' id='viz1601380926191' style='position: relative; margin: auto;'>
 							<noscript>
 								<a href='#'>
@@ -77,11 +80,14 @@
 							scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 							vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 						</script>
-						<br><br>
+						<br><br><br>
 
 
 						<!--Two-->
 						<h3>Regional Sales of Toy Company</h3>
+						<p>The dashboard below is for an international toy company which sells miniature vehicles. The company currently exports to nineteen different countries, and the dashboard shows visualisations for both orders and sales.<br><br>
+						The map shows the countries that they export to, with the bigger circles showing countries with more orders. If you hover over a circle, you will see the total orders and sales to that country from Jan 19 - July 20, as well as a breakdown of product line by proportion. The table shows country details, sorted by the number of orders made so far this year. The line charts at the bottom show the monthly sales and orders, while the bar chart shows sales by product line for this year.<br><br>
+						The filters allow you to choose specific territories and countries.</p>
 						<div class='tableauPlaceholder' id='viz1601381739290' style='position: relative; margin: auto;'>
 							<noscript>
 								<a href='#'>
