--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Northern Ireland COVID19 Analysis</h2>
+							<h4>(Aug 2020)</h4>
 							<p>Analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
