--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -20,6 +20,7 @@
 				<section class="spotlight style4 orient-right content-align-left image-position-center onload-image-fade-in onload-content-fade-left">
 					<div class="content">
 						<h2>Northern Ireland COVID19 Analysis</h2>
+						<h4>(Aug 2020)</h4>
 						<p>Below is an analysis of some of the ways in which COVID19 has affected the lives of people in Northern Ireland.<br><br>
 						Data was sourced from Northern Ireland Statistics and Research Agency (www.nisra.gov.uk). Pandas and Bokeh python libraries were used to create the interactive graphs.<br><br>
 						(The graphs on this page are easier to view on a computer, or in desktop view on a mobile).</p>
