--- a/portfolio_4.html
+++ b/portfolio_4.html
@@ -38,9 +38,22 @@
 				</section>
 
 				<section class="wrapper style1 align-center">
-
-					<div class="image-port" style='margin: auto; padding-top: 50px; padding-bottom: 50px; max-width: 90%;'>
-						<img src="images/property_app.gif" alt="" style="max-width: 100%;"/>
+					<div class="inner">
+						<h3>Overview</h3>
+						<p>I built this application for a client who had a portfolio of properties in many English cities. They had recently started acquiring new properties for the holiday rental market on sites such as airbnb.com and booking.com, as there was a higher profit margin than with traditional rentals. What they needed, was a tool that could easily deliver data based on certain criteria, so they could invest where there was the most value in the market. </p>
+						<div class="image-port" style='margin: auto; padding-top: 0px; padding-bottom: 40px; max-width: 90%;'>
+							<img src="images/property_app.gif" alt="" style="max-width: 100%;"/>
+						</div>
+						<p>The data is then saved in an easy to use format, leaving it simple to analyse later with Tableau, Power BI, Excel, etc.</p><br>
+						<h3>Example</h3>
+						<p>As an example, I've serched for properties in Brighton, East Sussex that have minimum 1 bedrooms and a maximum of £600k.</p>
+						<div class="image-port" style='margin: auto; padding-top: 0px; padding-bottom: 40px; max-width: 90%;'>
+							<img src="images/powershell_snap.jpg" alt="" style="max-width: 100%;"/>
+						</div>
+						<p>As you can see from the image above, the tool has scanned 17 webpages and stored the results. This gave us a total of 419 rows of data, sorted by price, in a little under 20 seconds. The image below shows a snapshot of the data.</p>
+						<div class="image-port" style='margin: auto; padding-top: 0px; padding-bottom: 40px; max-width: 90%;'>
+							<img src="images/excel_snap.jpg" alt="" style="max-width: 100%;"/>
+						</div>
 					</div>
 				</section>
 
