--- a/portfolio_4.html
+++ b/portfolio_4.html
@@ -48,11 +48,11 @@
 						<h3>Example</h3>
 						<p>As an example, I've serched for properties in Brighton, East Sussex that have minimum 1 bedrooms and a maximum of £600k.</p>
 						<div class="image-port" style='margin: auto; padding-top: 0px; padding-bottom: 40px; max-width: 90%;'>
-							<img src="images/powershell_snap.JPG" alt="" style="max-width: 100%;"/>
+							<img src="images/powershell_snap.gif" alt="" style="max-width: 100%;"/>
 						</div>
 						<p>As you can see from the image above, the tool has scanned 17 webpages and stored the results. This gave us a total of 419 rows of data, sorted by price, in a little under 20 seconds. The image below shows a snapshot of the data.</p>
 						<div class="image-port" style='margin: auto; padding-top: 0px; padding-bottom: 40px; max-width: 90%;'>
-							<img src="images/excel_snap.JPG" alt="" style="max-width: 100%;"/>
+							<img src="images/excel_snap.gif" alt="" style="max-width: 100%;"/>
 						</div>
 					</div>
 				</section>
